--- a/Netflix-Clone/package.json
+++ b/Netflix-Clone/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/TeshagerG/Netflix-Clone-2024-Vite-.git/",
+  "homepage": "https://TeshagerG/Netflix-Clone-2024-Vite-",
   "name": "netflix-clone",
   "private": true,
   "version": "0.0.0",
