--- a/Netflix-Clone/package.json
+++ b/Netflix-Clone/package.json
@@ -9,6 +9,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "build": "vite build",
+    "start": "vite",
+    "postinstall": "vite",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -35,6 +37,6 @@
     "gh-pages": "^6.2.0",
     "github-pages": "^3.0.2",
     "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.11"
   }
 }
