--- a/Netflix-Clone/.env
+++ b/Netflix-Clone/.env
@@ -1,2 +1,4 @@
-VITE_API_KEY=d7c48835bd49ff214b41c11f8a4c4b07
-VITE_ANOTHER_VARIABLE=some_value
+# VITE_API_KEY=d7c48835bd49ff214b41c11f8a4c4b07
+# VITE_ANOTHER_VARIABLE=some_value
+
+# import.meta.env.VITE_API_KEY
